# AppThreadGroup

./: .gitignore  .gitmodules  README.md
AppThreadGroup/: .gitignore  CMakeLists.txt  README.md  Readme.md  compile.cmake
AppThreadGroup/app_!cmake/: Readme.md
AppThreadGroup/app_dev/: Readme.md  app_dev_def.h  app_dev_empty.c  app_dev_empty.h
AppThreadGroup/app_ext/: app_ext_lib.h
AppThreadGroup/app_ext/app_ext_arch/: Readme.md  app_ext_arch.h  app_ext_arch_pc.c
AppThreadGroup/app_ext/app_ext_dev/: app_ext_dev.c  app_ext_dev.h  app_ext_dev_empty.c  app_ext_dev_empty.h
AppThreadGroup/app_ext/app_ext_os/: Readme.md  app_ext_os.h  app_ext_os_freertos.c  app_ext_os_linux.c  app_ext_os_linux.h  app_ext_os_template.h  app_ext_os_windows.c  app_ext_os_zephyr.c
AppThreadGroup/app_ext/app_ext_util/: app_ext_error_code.h  app_ext_simplify.h
AppThreadGroup/app_main/: CMakeLists.txt  app_func_test.h  main.c
AppThreadGroup/app_main/app_source/: ext_mem_static  mix_chunk_small
AppThreadGroup/app_project/: .gitignore  CMakeLists.txt  directory.cmake
AppThreadGroup/app_project/app_third/: .gitignore  CMakeLists.txt
AppThreadGroup/app_sys/: CMakeLists.txt  app_sys_lib.c  app_sys_lib.h
AppThreadGroup/app_sys/app_sys_clk/: app_sys_clk.c  app_sys_clk.h
AppThreadGroup/app_sys/app_sys_clock/: app_sys_clock.c
AppThreadGroup/app_sys/app_sys_ext_mem/: .gitignore  app_sys_ext_mem.c  app_sys_ext_mem.h  app_sys_ext_mem_cache.c  app_sys_ext_mem_cache.h  app_sys_ext_mem_cache_test.c  app_sys_ext_mem_src.c  app_sys_ext_mem_src.h  app_sys_ext_mem_src_table.h  app_sys_ext_mem_src_table.py  app_sys_ext_mem_table.c  app_sys_ext_mem_table.h  app_sys_ext_mem_table.py  mix_chunk_small.json  readme.txt
AppThreadGroup/app_sys/app_sys_ext_src/: app_sys_ext_src.c  app_sys_ext_src.h  app_sys_ext_src_table.c  app_sys_ext_src_table.h  app_sys_ext_src_table.py  mix_chunk_small.json
AppThreadGroup/app_sys/app_sys_idx_str/: .gitignore  app_sys_idx_str.c  app_sys_idx_str.py
AppThreadGroup/app_sys/app_sys_log/: app_sys_log.c  app_sys_log.h  app_sys_log_text.c  app_sys_log_text.h  app_sys_log_text_test.c
AppThreadGroup/app_sys/app_sys_mem/: app_sys_heap_dir.c  app_sys_heap_dir.h  app_sys_heap_dir_test.c  app_sys_heap_olsf.c  app_sys_heap_olsf.h  app_sys_heap_olsf_test.c  app_sys_mem_dir.c  app_sys_mem_dir.h  app_sys_mem_dir_test.c  app_sys_mem_olsf.c  app_sys_mem_olsf.h  app_sys_mem_olsf_test.c  app_sys_mem_slab.c  app_sys_mem_slab.h  app_sys_mem_tlsf.c  app_sys_mem_tlsf.h  app_sys_mem_tlsf_test.c  app_sys_slab.c  app_sys_slab.h
AppThreadGroup/app_sys/app_sys_pipe/: app_sys_pipe.c  app_sys_pipe.h
AppThreadGroup/app_sys/app_sys_rbuf/: app_sys_rbuf.c  app_sys_rbuf.h
AppThreadGroup/app_sys/app_sys_ring_buffer/: app_sys_ring_buffer.c
AppThreadGroup/app_sys/app_sys_slab/: app_sys_slab.c  app_sys_slab.h
AppThreadGroup/app_sys/app_sys_timer/: app_sys_clock.c  app_sys_clock.h  app_sys_timer.c  app_sys_timer.h  app_sys_timer_test.c
AppThreadGroup/app_sys/app_sys_trace_text/: app_sys_trace_text.c  app_sys_trace_text.h
AppThreadGroup/app_sys/app_sys_util/: app_sys_checksum.c  app_sys_checksum.h  app_sys_crc.c  app_sys_crc.h  app_sys_fft.c  app_sys_fft_test.c  app_sys_hashtable.c  app_sys_hashtable.h  app_sys_hashtable_test.c  app_sys_list.c  app_sys_list.h  app_sys_rbuf.c  app_sys_struct.h  app_sys_struct.json  app_sys_struct.py  app_sys_tree_rb.c  app_sys_tree_rb.h  app_sys_tree_rb_test.c  app_sys_util.h  app_sys_vbus.c  app_sys_vbus.json  app_sys_work.c  app_sys_work.h
AppThreadGroup/app_sys/app_sys_work/: app_sys_work.c  app_sys_work.h
AppThreadGroup/app_third/: .gitignore  CMakeLists.txt  Readme.md
AppThreadGroup/app_third/lib_fatfs/: CMakeLists.txt  app_third_fatfs.c  app_third_fatfs.h  diskio.c  ffconf.h  ffsystem.c
AppThreadGroup/app_third/lib_jerryscript/: CMakeLists.txt  js_convert.py
AppThreadGroup/app_third/lib_lvgl/: CMakeLists.txt  lv_api_hook.h  lv_conf.h
AppThreadGroup/app_third/lib_lz4/: CMakeLists.txt
AppThreadGroup/app_third/lib_nanopb/: CMakeLists.txt  nanopb_build.py
AppThreadGroup/app_third/lib_self/: CMakeLists.txt
AppThreadGroup/app_thread/: CMakeLists.txt
AppThreadGroup/app_thread/app_thread_group/: app_thread_group.c  app_thread_group.h  app_thread_master.c  app_thread_master.h  app_thread_slave.c  app_thread_slave.h  app_thread_task.c  app_thread_task.h
AppThreadGroup/app_thread/app_thread_jerryscript/: app_js_test_stream.txt  app_thread_jerryscript.c  app_thread_jerryscript.h
AppThreadGroup/app_thread/app_thread_lvgl/: app_thread_lvgl.c  app_thread_lvgl.h
AppThreadGroup/app_thread/app_thread_manage/: app_thread_manage.c  app_thread_manage.h
AppThreadGroup/app_thread/app_thread_master/: app_thread_master.c  app_thread_master.h  app_thread_slave_template.txt
AppThreadGroup/app_thread/app_thread_mix_custom/: app_thread_mix_custom.c  (+1 more)
AppThreadGroup/app_tmp/: app_lv_ui_float_tmp.h  app_module_alarm.c  app_module_alarm.h
AppThreadGroup/project/: CMakeLists.txt  README.md  directory.cmake  plan.txt
AppThreadGroup/project_locator/: README.md  compile.cmake
AppThreadGroup/project_math/: .gitignore  README.md
AppThreadGroup/project_study/: CMakeLists.txt  README.md  compile.cmake  directory.cmake
AppThreadGroup/project_temp/: CMakeLists.txt  README.md
AppThreadGroup/project_watch/: .gitignore  CMakeLists.txt  compile.cmake  directory.cmake  plan.txt
Watch/: .gitmodule  CMakeLists.txt  README.md  compile.cmake  directory.cmake  header.cmake  path.cmake  warn.cmake
Watch/app_!linux/: app_function_test.h  main.c
Watch/app_adaptor/: CMakeLists.txt  app_std_lib.h
Watch/app_ext/: CMakeLists.txt  app_ext_lib.h
Watch/app_lvgl/: CMakeLists.txt  lv_conf.h  lv_drv_conf.h
Watch/app_main/: CMakeLists.txt  app_func_test.h  app_function_test.h  cmake.txt  main.c
Watch/app_port/: app_std_lib.h
Watch/app_sys/: CMakeLists.txt
Watch/app_third/: .gitignore  .gitmodule  CMakeLists.txt  lv_conf.h
Watch/app_third_lib/: .gitignore  CMakeLists.txt  lv_conf.h
Watch/app_thread/: CMakeLists.txt  app_thread_interface.h
(+2409 files in other folders)
