cmake_minimum_required (VERSION 3.14)
# 添加任意策略
cmake_policy(VERSION 3.14)
cmake_policy(SET CMP0048 NEW)
cmake_policy(SET CMP0079 NEW)
# 创建项目
project(app_thread_group C CXX)
# 编译参数设置,导入文件搜索路径
include(${CMAKE_CURRENT_SOURCE_DIR}/compile.cmake)
include(${CMAKE_CURRENT_SOURCE_DIR}/directory.cmake)
# 编译器添加文件搜索路径
FIND_TARGET_H_PATH(target_path ${CMAKE_CURRENT_SOURCE_DIR}/../app_ext)
include_directories(${target_path})
FIND_TARGET_H_PATH(target_path ${CMAKE_CURRENT_SOURCE_DIR}/../app_sys)
include_directories(${target_path})
FIND_TARGET_H_PATH(target_path ${CMAKE_CURRENT_SOURCE_DIR}/../app_thread)
include_directories(${target_path})
# 添加生成库
add_library(app_ext     STATIC)
add_library(app_sys     STATIC)
add_library(app_dev     STATIC)
add_library(app_third   STATIC)
add_library(app_thread  STATIC)
# 生成库重构依赖项
# set_target_properties(app_ext    PROPERTIES LINKER_LANGUAGE C)
# set_target_properties(app_sys    PROPERTIES LINKER_LANGUAGE C)
# set_target_properties(app_dev    PROPERTIES LINKER_LANGUAGE C)
# set_target_properties(app_third  PROPERTIES LINKER_LANGUAGE C)
# set_target_properties(app_thread PROPERTIES LINKER_LANGUAGE C)
# 定义GUI宏
set(app_thread_group_use_lvgl   FALSE)
set(app_thread_group_use_scui   TRUE)
# 这里存在库的交叉依赖,因为日志模组希望做成全局化
target_link_libraries(app_sys    PUBLIC app_ext)
target_link_libraries(app_dev    PUBLIC app_sys)
if (app_thread_group_use_lvgl)
target_link_libraries(app_dev    PUBLIC lvgl)
target_link_libraries(app_dev    PUBLIC lvgl_demos)
target_link_libraries(app_dev    PUBLIC lvgl_examples)
endif()
target_link_libraries(app_third  PUBLIC app_dev)
target_link_libraries(app_thread PUBLIC app_third)
# 编译器添加文件搜索路径
FIND_TARGET_H_PATH(target_path ${CMAKE_CURRENT_SOURCE_DIR}/app_ext)
include_directories(${target_path})
FIND_TARGET_H_PATH(target_path ${CMAKE_CURRENT_SOURCE_DIR}/app_sys)
include_directories(${target_path})
FIND_TARGET_H_PATH(target_path ${CMAKE_CURRENT_SOURCE_DIR}/app_dev)
include_directories(${target_path})
FIND_TARGET_H_PATH(target_path ${CMAKE_CURRENT_SOURCE_DIR}/app_thread)
include_directories(${target_path})
FIND_TARGET_H_PATH(target_path ${CMAKE_CURRENT_SOURCE_DIR}/app_main)
include_directories(${target_path})
# 编译器添加文件搜索路径
FIND_TARGET_H_PATH(target_path ${CMAKE_CURRENT_SOURCE_DIR}/app_third/lib_fatfs)
include_directories(${target_path})
FIND_TARGET_H_PATH(target_path ${CMAKE_CURRENT_SOURCE_DIR}/app_third/lib_json)
include_directories(${target_path})
FIND_TARGET_H_PATH(target_path ${CMAKE_CURRENT_SOURCE_DIR}/app_third/lib_lz4)
include_directories(${target_path})
FIND_TARGET_H_PATH(target_path ${CMAKE_CURRENT_SOURCE_DIR}/app_third/lib_nanopb)
include_directories(${target_path})
FIND_TARGET_H_PATH(target_path ${CMAKE_CURRENT_SOURCE_DIR}/app_third/lib_self)
include_directories(${target_path})
if (app_thread_group_use_lvgl)
FIND_TARGET_H_PATH(target_path ${CMAKE_CURRENT_SOURCE_DIR}/app_third/lib_lvgl)
include_directories(${target_path})
endif()
# 添加子目录
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../app_sys     ${CMAKE_CURRENT_SOURCE_DIR}/app_!cmake/app_sys)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../app_thread  ${CMAKE_CURRENT_SOURCE_DIR}/app_!cmake/app_thread)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/app_ext        ${CMAKE_CURRENT_SOURCE_DIR}/app_!cmake/project_ext)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/app_sys        ${CMAKE_CURRENT_SOURCE_DIR}/app_!cmake/project_sys)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/app_dev        ${CMAKE_CURRENT_SOURCE_DIR}/app_!cmake/project_dev)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/app_third      ${CMAKE_CURRENT_SOURCE_DIR}/app_!cmake/project_third)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/app_thread     ${CMAKE_CURRENT_SOURCE_DIR}/app_!cmake/project_thread)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/app_main       ${CMAKE_CURRENT_SOURCE_DIR}/app_!cmake/project_main)
# 指定exe输出到app_exe
set(EXECUTABLE_OUTPUT_PATH                   ${CMAKE_CURRENT_SOURCE_DIR}/app_!cmake)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY           ${CMAKE_CURRENT_SOURCE_DIR}/app_!cmake)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG     ${CMAKE_CURRENT_SOURCE_DIR}/app_!cmake)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE   ${CMAKE_CURRENT_SOURCE_DIR}/app_!cmake)
