cmake_minimum_required (VERSION 3.14)
# 添加任意策略
cmake_policy(VERSION 3.14)
cmake_policy(SET CMP0048 NEW)
cmake_policy(SET CMP0079 NEW)
cmake_policy(SET CMP0194 NEW)
# 创建项目
project(app_thread_group C CXX)
# 编译参数设置, 导入文件搜索路径
include(${CMAKE_CURRENT_SOURCE_DIR}/compile.cmake)
include(${CMAKE_CURRENT_SOURCE_DIR}/directory.cmake)
# 添加生成库, 添加文件搜索路径
add_library(app_ext STATIC)
# set_target_properties(app_ext PROPERTIES LINKER_LANGUAGE C)
FIND_TARGET_H_PATH(target_path ${CMAKE_CURRENT_SOURCE_DIR}/../app_ext)
target_include_directories(app_ext SYSTEM PUBLIC ${target_path})
FIND_TARGET_H_PATH(target_path ${CMAKE_CURRENT_SOURCE_DIR}/app_ext)
target_include_directories(app_ext SYSTEM PUBLIC ${target_path})

add_library(app_sys STATIC)
# set_target_properties(app_sys PROPERTIES LINKER_LANGUAGE C)
FIND_TARGET_H_PATH(target_path ${CMAKE_CURRENT_SOURCE_DIR}/../app_sys)
target_include_directories(app_sys SYSTEM PUBLIC ${target_path})
FIND_TARGET_H_PATH(target_path ${CMAKE_CURRENT_SOURCE_DIR}/app_sys)
target_include_directories(app_sys SYSTEM PUBLIC ${target_path})
target_link_libraries(app_sys PUBLIC app_ext)

add_library(app_dev STATIC)
# set_target_properties(app_dev PROPERTIES LINKER_LANGUAGE C)
FIND_TARGET_H_PATH(target_path ${CMAKE_CURRENT_SOURCE_DIR}/../app_dev)
target_include_directories(app_sys SYSTEM PUBLIC ${target_path})
target_include_directories(app_dev SYSTEM PUBLIC ${target_path})
FIND_TARGET_H_PATH(target_path ${CMAKE_CURRENT_SOURCE_DIR}/app_dev)
target_include_directories(app_sys SYSTEM PUBLIC ${target_path})
target_include_directories(app_dev SYSTEM PUBLIC ${target_path})
target_link_libraries(app_dev PUBLIC app_sys)

add_library(app_third STATIC)
# set_target_properties(app_third PROPERTIES LINKER_LANGUAGE C)
FIND_TARGET_H_PATH(target_path ${CMAKE_CURRENT_SOURCE_DIR}/app_third/lib_fatfs)
target_include_directories(app_third SYSTEM PUBLIC ${target_path})
FIND_TARGET_H_PATH(target_path ${CMAKE_CURRENT_SOURCE_DIR}/app_third/lib_json)
target_include_directories(app_third SYSTEM PUBLIC ${target_path})
FIND_TARGET_H_PATH(target_path ${CMAKE_CURRENT_SOURCE_DIR}/app_third/lib_nanopb)
target_include_directories(app_third SYSTEM PUBLIC ${target_path})
FIND_TARGET_H_PATH(target_path ${CMAKE_CURRENT_SOURCE_DIR}/app_third/lib_self)
target_include_directories(app_third SYSTEM PUBLIC ${target_path})
target_link_libraries(app_third PUBLIC app_dev)

add_library(app_thread STATIC)
# set_target_properties(app_thread PROPERTIES LINKER_LANGUAGE C)
FIND_TARGET_H_PATH(target_path ${CMAKE_CURRENT_SOURCE_DIR}/../app_thread)
target_include_directories(app_dev SYSTEM PUBLIC ${target_path})
target_include_directories(app_thread SYSTEM PUBLIC ${target_path})
FIND_TARGET_H_PATH(target_path ${CMAKE_CURRENT_SOURCE_DIR}/app_thread)
target_include_directories(app_dev SYSTEM PUBLIC ${target_path})
target_include_directories(app_thread SYSTEM PUBLIC ${target_path})
target_link_libraries(app_thread PUBLIC app_third)

# 定义GUI宏
set(app_thread_group_use_lvgl   FALSE)
set(app_thread_group_use_scui   TRUE)

# 添加子目录
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../app_sys     ${CMAKE_CURRENT_SOURCE_DIR}/app_!cmake/app_sys)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../app_thread  ${CMAKE_CURRENT_SOURCE_DIR}/app_!cmake/app_thread)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/app_ext        ${CMAKE_CURRENT_SOURCE_DIR}/app_!cmake/project_ext)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/app_sys        ${CMAKE_CURRENT_SOURCE_DIR}/app_!cmake/project_sys)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/app_dev        ${CMAKE_CURRENT_SOURCE_DIR}/app_!cmake/project_dev)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/app_third      ${CMAKE_CURRENT_SOURCE_DIR}/app_!cmake/project_third)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/app_thread     ${CMAKE_CURRENT_SOURCE_DIR}/app_!cmake/project_thread)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/app_main       ${CMAKE_CURRENT_SOURCE_DIR}/app_!cmake/project_main)
# 指定exe输出到app_exe
set(EXECUTABLE_OUTPUT_PATH                   ${CMAKE_CURRENT_SOURCE_DIR}/app_!cmake)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY           ${CMAKE_CURRENT_SOURCE_DIR}/app_!cmake)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG     ${CMAKE_CURRENT_SOURCE_DIR}/app_!cmake)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE   ${CMAKE_CURRENT_SOURCE_DIR}/app_!cmake)
